fixed spacing within the code itself, also the website should update its title?

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,189 +1,189 @@
 
-:root{
-	--headerfont:#e13470;
-	--mainfont: #ffffff;
-	--bgcolor: #0c0b10;
-	--sidenav: #13111b;
-	--selectioncolor: #1f1b2a;
-	--selectioncolorbar:#1f1b2a;
-	--selectorfont:#e13470;
-}
+	:root{
+		--headerfont:#e13470;
+		--mainfont: #ffffff;
+		--bgcolor: #0c0b10;
+		--sidenav: #13111b;
+		--selectioncolor: #1f1b2a;
+		--selectioncolorbar:#1f1b2a;
+		--selectorfont:#e13470;
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-thin.ttf) format("truetype");
-	font-weight: 100;
-	font-style: normal;
-	
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-thin.ttf) format("truetype");
+		font-weight: 100;
+		font-style: normal;
+		
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-thinitalic.ttf) format("truetype");
-	font-weight: 100;
-	font-style: italic;
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-thinitalic.ttf) format("truetype");
+		font-weight: 100;
+		font-style: italic;
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-thinoblique.ttf) format("truetype");
-	font-weight: 100;
-	font-style: oblique;
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-thinoblique.ttf) format("truetype");
+		font-weight: 100;
+		font-style: oblique;
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-light.ttf) format("truetype");
-	font-weight: 200;
-	font-style: normal;
-	
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-light.ttf) format("truetype");
+		font-weight: 200;
+		font-style: normal;
+		
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-lightitalic.ttf) format("truetype");
-	font-weight: 200;
-	font-style: italic;
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-lightitalic.ttf) format("truetype");
+		font-weight: 200;
+		font-style: italic;
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-lightoblique.ttf) format("truetype");
-	font-weight: 200;
-	font-style: oblique;
-	
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-lightoblique.ttf) format("truetype");
+		font-weight: 200;
+		font-style: oblique;
+		
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-regular.ttf) format("truetype");
-	font-weight: normal;
-	font-style: normal;
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-regular.ttf) format("truetype");
+		font-weight: normal;
+		font-style: normal;
 
-}
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-italic.ttf) format("truetype");
-	font-weight: normal;
-	font-style: italic;
-	
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-italic.ttf) format("truetype");
+		font-weight: normal;
+		font-style: italic;
+		
+	}
 
-@font-face {
-	font-family: "Iosevka";
-	src: url(fonts/iosevka-oblique.ttf) format("truetype");
-	font-weight: normal;
-	font-style: oblique;
-	
-}
-
-
-@font-face {
-	font-family: "Iosevka";
-	src:url(fonts/iosevka-bold.ttf) format("truetype");
-	font-weight: bold;
-	font-style: oblique;
-	
-}
+	@font-face {
+		font-family: "Iosevka";
+		src: url(fonts/iosevka-oblique.ttf) format("truetype");
+		font-weight: normal;
+		font-style: oblique;
+		
+	}
 
 
+	@font-face {
+		font-family: "Iosevka";
+		src:url(fonts/iosevka-bold.ttf) format("truetype");
+		font-weight: bold;
+		font-style: oblique;
+		
+	}
 
-body{
-	background-color:var(--bgcolor);
-	font-family: 'Iosevka', Georgia, sans-serif;
-	width: calc(100% - 6em);
-}
 
-div.content {
-	padding: 0.3rem 0.9rem;
-  }
-	
-h1 {
-	
-	color: var(--headerfont);
-	font-size: 3rem;
-	font-style: oblique;
-	font-weight: 400;
-	padding-top: 4rem;
+
+	body{
+		background-color:var(--bgcolor);
+		font-family: 'Iosevka', Georgia, sans-serif;
+		width: calc(100% - 6em);
+	}
+
+	div.content {
+		padding: 0.3rem 0.9rem;
+	}
+		
+	h1 {
+		
+		color: var(--headerfont);
+		font-size: 3rem;
+		font-style: oblique;
+		font-weight: 400;
+		padding-top: 4rem;
+		padding-left: 5rem;
+		padding-right: 18rem;
+		
+	}
+
+
+	h2 {
+		color: var(--headerfont);
+		font-size: 2rem;
+		font-style: oblique;
+		font-weight: 500;
+		padding-top: 2rem;
+		padding-left: 5rem;
+		padding-right: 18rem;}
+
+	h3 {
+		font-size:32px; 
+		color: var(--headerfont);
+		font-weight: 500;
+	}
+		
+
+
+	p {
+		font-size: 1.6rem;
+	position: relative;
+	font-weight: 100; 
+	color:var(--mainfont);
+	outline:none;
 	padding-left: 5rem;
 	padding-right: 18rem;
-	
-}
+	line-height: 1.4;
 
+	}
 
-h2 {
-	color: var(--headerfont);
-	font-size: 2rem;
-	font-style: oblique;
-	font-weight: 500;
-	padding-top: 2rem;
-	padding-left: 5rem;
-	padding-right: 18rem;}
-
-h3 {
-	font-size:32px; 
-	color: var(--headerfont);
-	font-weight: 500;
-}
-	
-
-
-p {
-	font-size: 1.6rem;
-position: relative;
-font-weight: 100; 
-color:var(--mainfont);
-outline:none;
-padding-left: 5rem;
-padding-right: 18rem;
-line-height: 1.4;
-
-}
-
-.p2{
+	.p2	{
 	font-size: 1.7rem;
 	font-weight:200;
-position: relative;
-font-style:oblique;
-color:var(--mainfont);
-outline:none;
-line-height: 1.4;
-padding-left: 5rem;
-padding-right: 18rem;
+	position: relative;
+	font-style:oblique;
+	color:var(--mainfont);
+	outline:none;
+	line-height: 1.4;
+	padding-left: 5rem;
+	padding-right: 18rem;
 
 }
 
-.p3{
+	.p3		{
 	font-size: 1.4rem;
 	font-weight:200;
-position: relative;
-font-style:oblique;
-color:var(--mainfont);
-outline:none;
-line-height: 1.4;
-padding-left: 5rem;
-padding-right: 18rem;
+	position: relative;
+	font-style:oblique;
+	color:var(--mainfont);
+	outline:none;
+	line-height: 1.4;
+	padding-left: 5rem;
+	padding-right: 18rem;
 
-}
+	}
 
 
 
 
  
-.medialist{
+	.medialist	{
 	text-underline-position: under;
 	outline:none;
   } 
 	
-  .fade-in {
+  	.fade-in {
 	animation: fadein 1s;
 	-moz-animation: fadein 1s; /* Firefox */
 	-webkit-animation: fadein 1s; /* Safari and Chrome */
 	-o-animation: fadein 1s; /* Opera */
   }
 	
-  @keyframes fadein {
+  	@keyframes fadein {
 	from {
 	  opacity: 0;
 	}
@@ -194,23 +194,23 @@ padding-right: 18rem;
 
 
 
-a{
-	transition: ease 0.3s, background-color 0.3s;
+	a {
+		transition: ease 0.3s, background-color 0.3s;
 	font-weight: 200; 
 	text-decoration:none;
 	color:var(--mainfont);
 	outline:none;
 
-}
+	}
 
+	a:hover 
+	{
 
-a:hover {
 	color: var(--selectorfont);
 	outline:none;
 	background-color:var(--selectioncolor);
 	
-  }
-
+  	}
 
  /* The side navigation menu */
  .sidenav {
@@ -225,11 +225,8 @@ a:hover {
 	overflow-x: hidden; /* Disable horizontal scroll */
 	padding-top: 18rem; 
 	outline:none;
-	
   }
-  
-
-  
+ 
   /* The navigation menu links */
   .sidenav a {
 	padding: 1.7rem;
